# substrate-metadata-versions

metadatav10/: Cargo.toml
metadatav11/: Cargo.toml
metadatav8/: Cargo.toml
metadatav9/: Cargo.toml
