[package]
name = "frame-metadatav10"
version = "10.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-std = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate" , rev = "35fe3cd1bc4b64cadb0bc6196ae40173db65bb28" }
sp-core = { version = "2.0.0-rc6", default-features = false,  git = "https://github.com/paritytech/substrate" , rev = "35fe3cd1bc4b64cadb0bc6196ae40173db65bb28" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"serde",
]
