[package]
name = "frame-metadatav10"
version = "10.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-std = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate" , rev = "647ad15565d7c35ecf00b73b12cccad9858780b9" }
sp-core = { version = "2.0.0-rc6", default-features = false,  git = "https://github.com/paritytech/substrate" , rev = "647ad15565d7c35ecf00b73b12cccad9858780b9" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"serde",
]
