[package]
name = "frame-metadatav8"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , rev = "647ad15565d7c35ecf00b73b12cccad9858780b9" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", default-features = false , rev = "647ad15565d7c35ecf00b73b12cccad9858780b9" }

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"primitives/std",
	"serde",
]
